--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.8",
     "react-helmet": "^5.2.1",
     "react-slick": "^0.27.10",
     "slick-carousel": "^1.8.1"
