--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.8",
     "react-helmet": "^5.2.1",
+    "react-laag": "^1.7.3",
     "react-slick": "^0.27.10",
     "slick-carousel": "^1.8.1"
   },
