--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.8",
     "react-helmet": "^5.2.1",
+    "react-hook-form": "^6.8.1",
     "react-hooks-paginator": "^0.4.4",
     "react-laag": "^1.7.3",
     "react-search-field": "^1.1.0",
