--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,15 +1,20 @@
 backend:
   name: git-gateway
   branch: master
+
 display_url: https://fecmt.netlify.app
+
 media_folder: static/assets
 public_folder: /assets
+
 collections:
   - name: blog
     label: Blog
     folder: _data/blog
     slug: '{{day}}-{{month}}-{{year}}-{{slug}}'
     create: true
+    editor:
+      preview: false
     fields:
       - {
           label: Template,
