--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-hook-form": "^6.8.1",
     "react-hooks-paginator": "^0.4.4",
     "react-laag": "^1.7.3",
+    "react-netlify-forms": "^1.2.0",
+    "react-number-format": "^4.4.1",
     "react-search-field": "^1.1.0",
     "react-slick": "^0.27.10",
     "slick-carousel": "^1.8.1",
