[chore] add required false to image config.yml

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,6 +24,6 @@ collections:
         }
       - { name: date, label: Data, widget: datetime, dateFormat: "DD.MM.YYYY" }
       - { name: title, label: Título, widget: string }
-      - { name: img, label: Imagem, widget: image }
+      - { name: img, label: Imagem, widget: image, required: false }
       - { name: body, label: Body, widget: markdown }
       - { name: fonte, label: Fonte, widget: string }
