--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,3 +27,20 @@ collections:
       - { name: img, label: Imagem, widget: image, required: false }
       - { name: body, label: Body, widget: markdown }
       - { name: fonte, label: Fonte, widget: string }
+  - name: convencoes
+    label: Convencoes
+    folder: _data/convencoes
+    slug: '{{day}}-{{month}}-{{year}}-{{slug}}'
+    create: true
+    editor:
+      preview: false
+    fields:
+      - {
+          label: Template,
+          name: template,
+          widget: hidden,
+          default: ConvencoesPost,
+        }
+      - { name: date, label: Data, widget: datetime, dateFormat: "DD.MM.YYYY" }
+      - { name: name, label: Nome, widget: string }
+      - { name: arquivo, label: Arquivo, widget: file }
