--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,17 +30,11 @@ collections:
   - name: convencoes
     label: Convencoes
     folder: _data/convencoes
-    slug: '{{day}}-{{month}}-{{year}}-{{slug}}'
+    slug: '{{slug}}'
     create: true
     editor:
       preview: false
     fields:
-      - {
-          label: Template,
-          name: template,
-          widget: hidden,
-          default: ConvencoesPost,
-        }
       - { name: date, label: Data, widget: datetime, dateFormat: "DD.MM.YYYY" }
       - { name: name, label: Nome, widget: string }
       - { name: arquivo, label: Arquivo, widget: file }
