--- a/package.json
+++ b/package.json
@@ -4,43 +4,52 @@
   "author": "FECMT",
   "version": "1.0.0",
   "license": "MIT",
+  "private": true,
   "bugs": {
     "url": "https://github.com/saulofilho/fecmt"
   },
   "dependencies": {
-    "@loadable/component": "^5.13.1",
-    "gatsby": "^2.19.7",
-    "gatsby-plugin-dark-mode": "^1.1.1",
-    "gatsby-plugin-google-analytics": "^2.1.36",
-    "gatsby-plugin-manifest": "^2.4.1",
-    "gatsby-plugin-netlify-cms": "^4.1.38",
-    "gatsby-plugin-offline": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-sass": "^2.1.28",
-    "gatsby-remark-emojis": "^0.4.2",
-    "gatsby-remark-prismjs": "^3.3.31",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.53",
+    "@loadable/component": "^5.16.4",
+    "@types/node": "^22.13.4",
+    "cross-fetch": "^4.1.0",
+    "decap-cms-app": "^3.6.2",
+    "fbjs": "^3.0.5",
+    "gatsby": "^5.14.1",
+    "gatsby-plugin-dark-mode": "^1.1.2",
+    "gatsby-plugin-decap-cms": "^4.0.0",
+    "gatsby-plugin-google-analytics": "^5.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-offline": "^6.14.0",
+    "gatsby-plugin-postcss": "^6.14.0",
+    "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-remark-emojis": "^0.4.3",
+    "gatsby-remark-prismjs": "^7.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21",
-    "netlify-cms-app": "^2.11.13",
-    "node-sass": "^4.13.1",
-    "prismjs": "^1.25.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-feather": "^2.0.8",
-    "react-helmet": "^5.2.1",
-    "react-hook-form": "^6.8.1",
-    "react-hooks-paginator": "^0.4.4",
-    "react-laag": "^1.7.3",
-    "react-netlify-forms": "^1.2.0",
-    "react-number-format": "^4.4.1",
-    "react-search-field": "^1.1.0",
-    "react-slick": "^0.27.10",
+    "netlify-cli": "^18.1.0",
+    "node-fetch": "^3.3.2",
+    "prismjs": "^1.29.0",
+    "react": "18",
+    "react-dom": "18",
+    "react-feather": "^2.0.10",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.54.2",
+    "react-hooks-paginator": "^0.5.3",
+    "react-laag": "^2.0.5",
+    "react-netlify-forms": "^1.3.3",
+    "react-number-format": "^5.4.3",
+    "react-search-field": "^2.0.1",
+    "react-server-dom-webpack": "^19.0.0",
+    "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "typeco": "^1.0.0"
+    "typeco": "^1.0.0",
+    "webpack": "^5.59.0",
+    "whatwg-url": "^14.1.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^3.5.1"
   },
   "homepage": "https://github.com/saulofilho/fecmt",
   "keywords": [
@@ -55,7 +64,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "yarn run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
